implemented web services methods